--- a/src/app/tailwind/main.css
+++ b/src/app/tailwind/main.css
@@ -1,3 +1,3 @@
-@import "tailwindcss";
-@import "tw-animate-css";
-@import "vue-sonner/style.css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
+@import 'vue-sonner/style.css';
